Music component complete

--- a/app.json
+++ b/app.json
@@ -10,5 +10,10 @@
     "navigationBarTitleText": "沐浴春风",
     "navigationBarTextStyle": "black"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "requiredBackgroundModes": [
+    "audio",
+    "location"
+  ]
+
 }
