--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
-    "pages/classic/classic",
     "pages/book/book",
+    "pages/classic/classic",
     "pages/my/my",
-    "pages/detail/detail",
+    "pages/book-detail/book-detail",
     "pages/classic-detail/index",
     "pages/about/about",
     "pages/course/course"
