--- a/project.config.json
+++ b/project.config.json
@@ -6,8 +6,8 @@
 	"setting": {
 		"urlCheck": false,
 		"es6": true,
-		"enhance": true,
-		"postcss": true,
+		"enhance": false,
+		"postcss": false,
 		"minified": false,
 		"newFeature": true,
 		"coverView": true,
@@ -22,7 +22,7 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.8.0",
+	"libVersion": "2.7.1",
 	"appid": "wxfc2183a8a34ea349",
 	"projectname": "bayue",
 	"debugOptions": {
@@ -49,13 +49,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "pages/book-detail/book-detail",
 					"pathName": "pages/book-detail/book-detail",
 					"query": "bid=7",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "我的",
+					"pathName": "pages/my/my",
+					"query": "",
 					"scene": null
 				}
 			]
