--- a/project.config.json
+++ b/project.config.json
@@ -60,7 +60,7 @@
 				},
 				{
 					"id": 1,
-					"name": "我的",
+					"name": "pages/my/my",
 					"pathName": "pages/my/my",
 					"query": "",
 					"scene": null
